Fixed a work wrap issue

--- a/src/Byteology.Website/Tailwind/tailwind.css
+++ b/src/Byteology.Website/Tailwind/tailwind.css
@@ -7,8 +7,9 @@
         background-color: rgb(3 14 40);
     }
     
-    * {
-        @apply relative
+    *, :after, :before {
+        @apply relative;
+        overflow-wrap: anywhere;
     }
 
     *:focus {
@@ -20,7 +21,6 @@
     .page {
         @apply text-body;
         @apply font-sans;
-        @apply break-words;
 
         @apply selection:text-accent-fg;
         @apply selection:bg-accent-alt;
